# Othello_CSPY

./: .editorconfig  .gitattributes  .gitignore  .runsettings  CLAUDE.md  Directory.Build.props  LICENSE  Othello.WPF.sln  Othello.WinUI3.sln  Othello.sln  Othello.slnx  README.md
.claude/: .instructions.md
.claude/commands/: code-review.md  debug-ai.md  diff-review.md  new-feature.md  security-scan.md  semgrep-scan.md  supply-chain-audit.md  update-style.md
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/Othello.AI/: README.md
src/Othello.AI/Rust/: Cargo.toml  README.md  build.rs  build_rust.ps1  pyproject.toml
src/Othello.AI/Rust/src/: lib.rs
src/Othello.Console/: ConsoleInputParser.cs  Othello.Console.csproj  Program.cs
src/Othello.Core/: Othello.Core.csproj
src/Othello.Python/: README.md  ai.py  alpha_beta.py  alpha_beta_py.py  board.py  evaluator.py  test_othello.py
src/Othello.Rust/: Cargo.toml  README.md  build_rust.ps1
src/Othello.Rust/src/: lib.rs
src/Othello.Tests/: Othello.Tests.csproj  README.md
src/Othello.Tests.WPF/: Othello.Tests.WPF.csproj
src/Othello.ViewModels/: BoardSquareViewModel.cs  GameViewModel.TestHelpers.cs  GameViewModel.cs  KifuViewModel.cs  Othello.ViewModels.projitems  Othello.ViewModels.shproj  RelayCommand.cs  ScorePoint.cs  StatsViewModel.cs  ViewModelBase.cs
src/Othello.WPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Othello.WPF.csproj
src/Othello.WinUI3/: MainWindow.xaml  MainWindow.xaml.cs  Othello.WinUI3.csproj  (+1 more)
tools/: measure-coverage.ps1
(+92 files in other folders)
